force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <description>[i2PMS] Project별/Task 별 Issue 관리 Object</description>
    <label>Issue</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>