force-app/main/default/objects/Issue__c/fields/DeployDate__c.field-meta.xml
<CustomField>
    <fullName>DeployDate__c</fullName>
    <label>Deploy Date</label>
    <type>Date</type>
</CustomField>