force-app/main/default/objects/Issue__c/fields/fm_IssueLink__c.field-meta.xml
<CustomField>
    <fullName>fm_IssueLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Id , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue(L)</label>
    <type>Text</type>
</CustomField>