force-app/main/default/objects/Issue__c/fields/fm_RelatedRecordLink__c.field-meta.xml
<CustomField>
    <fullName>fm_RelatedRecordLink__c</fullName>
    <formula>IF ( NOT(ISBLANK(Milestone__c)), HYPERLINK(&apos;/&apos;+ RelatedRecordId__c, Milestone__r.Name),
IF ( NOT(ISBLANK(Requirement__c)), HYPERLINK(&apos;/&apos;+ RelatedRecordId__c, Requirement__r.Name),
IF ( NOT(ISBLANK(Implementation__c)),HYPERLINK(&apos;/&apos;+ RelatedRecordId__c, Implementation__r.Name),
IF ( NOT(ISBLANK(MeetingMinute__c)),HYPERLINK(&apos;/&apos;+ RelatedRecordId__c, MeetingMinute__r.Name),&apos;&apos;  
			)
			)
			)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>