force-app/main/default/objects/Issue__c/fields/IssueCategory__c.field-meta.xml
<CustomField>
    <fullName>IssueCategory__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Scope</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>