force-app/main/default/objects/Issue__c/fields/RelatedDepart__c.field-meta.xml
<CustomField>
    <fullName>RelatedDepart__c</fullName>
    <label>관련 조직</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TF</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>LK Re</fullName>
            </value>
            <value>
                <fullName>경관팀</fullName>
            </value>
            <value>
                <fullName>개발사</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>