force-app/main/default/objects/Issue__c/fields/RelatedMemeber__c.field-meta.xml
<CustomField>
    <fullName>RelatedMemeber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Memeber</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Member__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Member__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Member__c</referenceTo>
    <relationshipName>Issue</relationshipName>
    <type>Lookup</type>
</CustomField>