force-app/main/default/objects/Issue__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <label>Related RecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>