force-app/main/default/objects/Issue__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project 지정 후 조회해주세요.</inlineHelpText>
    <label>Requirement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Requirement__c.Project_Temp__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipName>Issue</relationshipName>
    <type>Lookup</type>
</CustomField>