force-app/main/default/objects/Issue__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <label>Bug</label>
</RecordType>