force-app/main/default/objects/Issue__c/validationRules/Check_Close_Date_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Close_Date_Issue</fullName>
    <active>true</active>
    <description>Status 를 Hold 를 제외한 Open 이외의 단계로 변경 &amp; Close Date = Null 인 경우</description>
    <errorConditionFormula>(  RecordType.Name = &apos;Issue&apos; &amp;&amp;
	TEXT(Status__c) &lt;&gt; &apos;Open&apos; &amp;&amp;
	TEXT(Status__c) &lt;&gt; &apos;Hold&apos; ) &amp;&amp; 
	ISNULL ( CloseDate__c )</errorConditionFormula>
    <errorMessage>Close Date 를 지정해 주세요.</errorMessage>
</ValidationRule>