force-app/main/default/objects/Issue__c/validationRules/Check_Related_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Related_Information</fullName>
    <active>true</active>
    <description>연결된 상위 레코드가 전부 Null 인 경우</description>
    <errorConditionFormula>ISBLANK(Project__c) &amp;&amp;
ISBLANK(Milestone__c) &amp;&amp;
ISBLANK(Requirement__c) &amp;&amp;
ISBLANK(Implementation__c) &amp;&amp;
ISBLANK(MeetingMinute__c)</errorConditionFormula>
    <errorMessage>Issue(또는 Bug) 와 관련된 Related Information 을 지정해주세요.</errorMessage>
</ValidationRule>